Fixing minor bug on hero being displayed too low on the screen

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -741,10 +741,12 @@ footer > a:hover {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 2.5rem;
     }
 
     .hero-text {
         mix-blend-mode: color-burn;
+        padding: 0;
     }
 
     .cta-hero {
